# Wizzzard

./: CMakeLists.txt  areyoulucky.cpp  areyoulucky.h  areyoulucky.txt  areyoulucky2.txt  dog.txt  dwarf.txt  game.h  main.cpp  multiriddleman.cpp  multiriddleman.h  mystery_guy.txt  opponent.cpp  opponent.h  person.cpp  person.h  riddleman.cpp  riddleman.h  welcome.txt  wizard.cpp  wizard.h
Wizard game/: Wizard game.cbp  Wizard game.depend  areyoulucky.cpp  areyoulucky.h  fifth.txt  first.txt  fourth.txt  game.cpp  game.h  main.cpp  multiriddleman.cpp  multiriddleman.h  opponent.cpp  opponent.h  person.cpp  person.h  riddleman.cpp  riddleman.h  second.txt  teacher.txt  third.txt  welcome_wizard.txt  wizard.cpp  wizard.h
